Добавит страницу чата

--- a/markup/chat.html
+++ b/markup/chat.html
@@ -24,7 +24,25 @@
           </div>
         </div>
       </div>
-      <div class="chat__container"></div>
+      <div class="chat__container">
+        <div class="chat__wrapper">
+          <div class="chat__wrapper-mesage send">
+            <div class="chat__mesage send">
+              Lorem ipsum dolor sit amet consectetur. Ut sit volutpat ultricies
+              mi in. Odio sed adipiscing in fames hac a
+            </div>
+          </div>
+          <div class="chat__wrapper-mesage received">
+            <div class="chat__mesage received">Привет)</div>
+          </div>
+          <div class="chat__wrapper-mesage received">
+            <div class="chat__mesage received">Чо ты как там?</div>
+          </div>
+          <div class="chat__wrapper-mesage send">
+            <div class="chat__mesage send">Да норм вроде. спс</div>
+          </div>
+        </div>
+      </div>
       <div class="chat__footer">
         <form class="chat__form" action="">
           <div class="chat__form-wrapper chat__form-wrapper--input">
