Поправит классы и величины

--- a/markup/chat.html
+++ b/markup/chat.html
@@ -9,57 +9,59 @@
     <title>GREEN-API/chat</title>
   </head>
   <body>
-    <main class="chat">
-      <div class="chat__header">
-        <div class="chat__contact">
-          <div class="chat__contact-avatar">
-            <img
-              class="contact__avatar"
-              src="./img/contact_avatar.png"
-              alt="contact-avatar"
-            />
-          </div>
-          <div class="chat__contact-numbet">
-            <p class="chat__numbet">+79955836252</p>
-          </div>
-        </div>
-      </div>
-      <div class="chat__container">
-        <div class="chat__wrapper">
-          <div class="chat__wrapper-mesage send">
-            <div class="chat__mesage send">
-              Lorem ipsum dolor sit amet consectetur. Ut sit volutpat ultricies
-              mi in. Odio sed adipiscing in fames hac a
+    <div class="page page__chat">
+      <main class="chat">
+        <div class="chat__header">
+          <div class="chat__contact">
+            <div class="chat__contact-avatar">
+              <img
+                class="contact__avatar"
+                src="./img/contact_avatar.png"
+                alt="contact-avatar"
+              />
+            </div>
+            <div class="chat__contact-numbet">
+              <p class="chat__numbet">+79955836252</p>
             </div>
           </div>
-          <div class="chat__wrapper-mesage received">
-            <div class="chat__mesage received">Привет)</div>
-          </div>
-          <div class="chat__wrapper-mesage received">
-            <div class="chat__mesage received">Чо ты как там?</div>
-          </div>
-          <div class="chat__wrapper-mesage send">
-            <div class="chat__mesage send">Да норм вроде. спс</div>
+        </div>
+        <div class="chat__container">
+          <div class="chat__wrapper">
+            <div class="chat__wrapper-mesage send">
+              <div class="chat__mesage send">
+                Lorem ipsum dolor sit amet consectetur. Ut sit volutpat
+                ultricies mi in. Odio sed adipiscing in fames hac a
+              </div>
+            </div>
+            <div class="chat__wrapper-mesage received">
+              <div class="chat__mesage received">Привет)</div>
+            </div>
+            <div class="chat__wrapper-mesage received">
+              <div class="chat__mesage received">Чо ты как там?</div>
+            </div>
+            <div class="chat__wrapper-mesage send">
+              <div class="chat__mesage send">Да норм вроде. спс</div>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="chat__footer">
-        <form class="chat__form" action="">
-          <div class="chat__form-wrapper chat__form-wrapper--input">
-            <textarea
-              class="chat__input"
-              cols="30"
-              rows="10"
-              autofocus
-            ></textarea>
-          </div>
-          <div class="chat__form-wrapper">
-            <button class="chat__submit">
-              <img src="./img/chat_submit.png" alt="" />
-            </button>
-          </div>
-        </form>
-      </div>
-    </main>
+        <div class="chat__footer">
+          <form class="chat__form" action="">
+            <div class="chat__form-wrapper chat__form-wrapper--input">
+              <textarea
+                class="chat__input"
+                cols="30"
+                rows="10"
+                autofocus
+              ></textarea>
+            </div>
+            <div class="chat__form-wrapper">
+              <button class="chat__submit">
+                <img src="./img/chat_submit.png" alt="" />
+              </button>
+            </div>
+          </form>
+        </div>
+      </main>
+    </div>
   </body>
 </html>
