--- a/markup/login.html
+++ b/markup/login.html
@@ -9,57 +9,61 @@
     <title>GREEN-API/login</title>
   </head>
   <body>
-    <header></header>
-    <main>
-      <div class="login__container">
-        <div class="login__wrapper">
-          <div class="login__title">
-            <h1 class="title__text">Авторизация</h1>
-          </div>
-          <form class="login__form">
-            <div class="login__input">
-              <div class="login__input-wrapper">
-                <label for="IdInstance"> IdInstance </label>
-                <input
-                  id="IdInstance"
-                  type="text"
-                  name="IdInstance"
-                  required
-                  placeholder="gd56Y3GJSGT"
-                />
-              </div>
-              <div class="login__input-wrapper">
-                <label for="ApiTokenInstance"> ApiTokenInstance </label>
-                <input
-                  id="ApiTokenInstance"
-                  type="text"
-                  name="ApiTokenInstance"
-                  required
-                  placeholder="gd56Y3GJSGT"
-                />
-              </div>
-            </div>
+    <div class="page page__login">
+      <header class="login__header"></header>
+      <main class="login">
+        <div class="login__container">
+          <div class="login__wrapper">
             <div class="login__title">
-              <h1 class="title__text">Написать пользователю</h1>
+              <h1 class="title__text">Авторизация</h1>
             </div>
-            <div class="login__input">
-              <div class="login__input-wrapper">
-                <label for="IdInstance"> Номер телефона </label>
-                <input
-                  id="IdInstance"
-                  type="number"
-                  name="IdInstance"
-                  required
-                  placeholder="+79955836252"
-                />
+            <form class="login__form">
+              <div class="login__input">
+                <div class="login__input-wrapper">
+                  <label for="IdInstance"> IdInstance </label>
+                  <input
+                    id="IdInstance"
+                    type="text"
+                    name="IdInstance"
+                    required
+                    placeholder="gd56Y3GJSGT"
+                  />
+                </div>
+                <div class="login__input-wrapper">
+                  <label for="ApiTokenInstance"> ApiTokenInstance </label>
+                  <input
+                    id="ApiTokenInstance"
+                    type="text"
+                    name="ApiTokenInstance"
+                    required
+                    placeholder="gd56Y3GJSGT"
+                  />
+                </div>
               </div>
-              <div class="login__input-wrapper login__input-wrapper--button">
-                <button class="login__submit" type="submit">Начать чат</button>
+              <div class="login__title">
+                <h1 class="title__text">Написать пользователю</h1>
               </div>
-            </div>
-          </form>
+              <div class="login__input">
+                <div class="login__input-wrapper">
+                  <label for="IdInstance"> Номер телефона </label>
+                  <input
+                    id="IdInstance"
+                    type="number"
+                    name="IdInstance"
+                    required
+                    placeholder="+79955836252"
+                  />
+                </div>
+                <div class="login__input-wrapper login__input-wrapper--button">
+                  <button class="login__submit" type="submit">
+                    Начать чат
+                  </button>
+                </div>
+              </div>
+            </form>
+          </div>
         </div>
-      </div>
-    </main>
+      </main>
+    </div>
   </body>
 </html>
