--- a/markup/chat.html
+++ b/markup/chat.html
@@ -27,8 +27,53 @@
         </div>
         <div class="chat__container">
           <div class="chat__wrapper">
-            <div class="chat__wrapper-mesage send">
-              <div class="chat__mesage send">
+            <div class="chat__wrapper-mesage received">
+              <div class="chat__mesage received">Чо ты как там?</div>
+            </div>
+            <div class="chat__wrapper-mesage sent">
+              <div class="chat__mesage sent">
+                Lorem ipsum dolor sit amet consectetur. Ut sit volutpat
+                ultricies mi in. Odio sed adipiscing in fames hac a
+              </div>
+            </div>
+            <div class="chat__wrapper-mesage received">
+              <div class="chat__mesage received">
+                Lorem ipsum dolor sit amet consectetur. Ut sit volutpat
+                ultricies mi in. Odio sed adipiscing in fames hac a Lorem ipsum
+                dolor sit amet consectetur. Ut sit volutpat ultricies mi in.
+                Odio sed adipiscing in fames hac a
+              </div>
+            </div>
+            <div class="chat__wrapper-mesage sent">
+              <div class="chat__mesage sent">
+                Lorem ipsum dolor sit amet consectetur. Ut sit volutpat
+                ultricies mi in. Odio sed adipiscing in fames hac a
+              </div>
+            </div>
+            <div class="chat__wrapper-mesage received">
+              <div class="chat__mesage received">
+                Lorem ipsum dolor sit amet consectetur. Ut sit volutpat
+                ultricies mi in. Odio sed adipiscing in fames hac a Lorem ipsum
+                dolor sit amet consectetur. Ut sit volutpat ultricies mi in.
+                Odio sed adipiscing in fames hac a
+              </div>
+            </div>
+            <div class="chat__wrapper-mesage sent">
+              <div class="chat__mesage sent">
+                Lorem ipsum dolor sit amet consectetur. Ut sit volutpat
+                ultricies mi in. Odio sed adipiscing in fames hac a
+              </div>
+            </div>
+            <div class="chat__wrapper-mesage received">
+              <div class="chat__mesage received">
+                Lorem ipsum dolor sit amet consectetur. Ut sit volutpat
+                ultricies mi in. Odio sed adipiscing in fames hac a Lorem ipsum
+                dolor sit amet consectetur. Ut sit volutpat ultricies mi in.
+                Odio sed adipiscing in fames hac a
+              </div>
+            </div>
+            <div class="chat__wrapper-mesage sent">
+              <div class="chat__mesage sent">
                 Lorem ipsum dolor sit amet consectetur. Ut sit volutpat
                 ultricies mi in. Odio sed adipiscing in fames hac a
               </div>
@@ -37,10 +82,16 @@
               <div class="chat__mesage received">Привет)</div>
             </div>
             <div class="chat__wrapper-mesage received">
+              <div class="chat__mesage received">
+                Lorem ipsum dolor sit amet consectetur. Ut sit volutpat
+                ultricies mi in. Odio sed adipiscing in fames hac a
+              </div>
+            </div>
+            <div class="chat__wrapper-mesage received">
               <div class="chat__mesage received">Чо ты как там?</div>
             </div>
-            <div class="chat__wrapper-mesage send">
-              <div class="chat__mesage send">Да норм вроде. спс</div>
+            <div class="chat__wrapper-mesage sent">
+              <div class="chat__mesage sent">Да норм вроде. спс</div>
             </div>
           </div>
         </div>
