Добаит кнопку выхода

--- a/markup/chat.html
+++ b/markup/chat.html
@@ -13,15 +13,26 @@
       <main class="chat">
         <div class="chat__header">
           <div class="chat__contact">
-            <div class="chat__contact-avatar">
-              <img
-                class="contact__avatar"
-                src="./img/contact_avatar.png"
-                alt="contact-avatar"
-              />
+            <div class="chat__contact-wrapper">
+              <div class="chat__contact-avatar">
+                <img
+                  class="contact__avatar"
+                  src="./img/avatar.svg"
+                  alt="contact-avatar"
+                />
+              </div>
+              <div class="chat__contact-numbet">
+                <p class="chat__numbet">+79955836252</p>
+              </div>
             </div>
-            <div class="chat__contact-numbet">
-              <p class="chat__numbet">+79955836252</p>
+            <div class="chat__exit">
+              <a href="" class="chat__exit-link">
+                <img
+                  class="contact__avatar"
+                  src="./img/exit.svg"
+                  alt="contact-avatar"
+                />
+              </a>
             </div>
           </div>
         </div>
@@ -107,7 +118,7 @@
             </div>
             <div class="chat__form-wrapper">
               <button class="chat__submit">
-                <img src="./img/chat_submit.png" alt="" />
+                <img src="./img/submit.svg" alt="" />
               </button>
             </div>
           </form>
